--- a/modelseedpy/config.cfg
+++ b/modelseedpy/config.cfg
@@ -1,5 +1,5 @@
 [biochem]
-path = data/ModelSEEDDatabase
+path = ../ModelSEEDDatabase
 [data]
 template_folder = data/templates
 classifier_folder = data/ml
