replace MSpy imports with MSpy_freiburgermsu

--- a/modelseedpy_freiburgermsu/config.cfg
+++ b/modelseedpy_freiburgermsu/config.cfg
@@ -6,6 +6,6 @@ classifier_folder = data/ml
 media_folder = data/media
 [logging]
 log_file = no
-filename = modelseedpy.log
+filename = modelseedpy_freiburgermsu.log
 console_level = warning
 file_level = info
